--- a/styles/main.less
+++ b/styles/main.less
@@ -1,7 +1,8 @@
 .text-center { text-align: center; }
 .text-left { text-align: left; }
 .text-right { text-align: right; }
-.noselect {
+
+.no-select {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -9,31 +10,16 @@
   -ms-user-select: none;
   user-select: none;
 }
+.draggable {
+  -webkit-app-region: drag;
+}
+.non-draggable {
+  -webkit-app-region: no-drag;
+}
 
 html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-}
-
-#piosys {
-  .noselect;
-  * { cursor: default; }
-  height: 100%;
-  width: 100%;
-  background: url('../images/school_logo_watermark.png') 50% 0px no-repeat;
-
-  #main-header {
-    text-align: center;
-    margin: 42px auto;
-    h1 {
-      font-size: 20px;
-      color: #666;
-    }
-  }
-
-  #main-container {
-    .text-center;
-    padding: 21px;
-  }
+  .no-select;
 }
